Add Privacy Policy section to index.html
Update policy to comply with google play requirements.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
 <body>
 	<div class="container">
+		<h4>Privacy Policy for Contract Forms</h4>
+		<p>Developed by Tri State Awnings</p>
+		<p>Tri State Awnings ("we," "us," or "our") operates the Contract Forms app.</p>
 		<p>
     <p id="currentDateDisplay" style="font-weight:bold;"></p>
   </p>
